wizarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wizarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wizarr
  template:
    metadata:
      labels:
        app: wizarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-basalt
      containers:
        - name: wizarr
          image: ghcr.io/wizarrrr/wizarr
          resources:
            limits:
              memory: "1Gi"
              cpu: "2"
            requests:
              memory: "0Gi"
              cpu: "0"
          ports:
            - containerPort: 5690
              protocol: TCP
          volumeMounts:
            - name: wizarr-config
              mountPath: /data/database
      volumes:
        - name: wizarr-config
          persistentVolumeClaim:
            claimName: wizarr-config
