wizarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wizarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-dns"
spec:
  tls:
    - hosts:
        - wizarr.ozeliurs.com
      secretName: wizarr-tls
  rules:
    - host: wizarr.ozeliurs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wizarr
                port:
                  number: 5690
